ajout graphique précipitations

--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,7 @@ table {
     width: 33%;
     border-collapse: collapse;
     margin-top: 20px;
-    margin-left: 10px;
+    margin-left: 10%;
     margin-right: auto;
 }
 
