--- a/styles.css
+++ b/styles.css
@@ -83,13 +83,10 @@ main p {
     color: #666;
 }
 
-/* Style pour le conteneur du graphique */
-#precipitation-container {
+/* Style pour le graphique */
+#precipitation-chart {
     margin-left: auto;
     margin-right: auto;
-}
-/* Style pour le graphique */
-canvas {
     max-width: 50%; /* Limite la largeur du graphique */
     height: auto; /* Ajuste la hauteur automatiquement */
 }
