--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ main p {
     margin-left: auto;
     margin-right: auto;
     max-width: 50%; /* Limite la largeur du graphique */
-    height: auto; /* Ajuste la hauteur automatiquement */
+    height: 30%; /* Ajuste la hauteur automatiquement */
 }
 
 /* Pied de page*/
