--- a/styles.css
+++ b/styles.css
@@ -87,8 +87,8 @@ main p {
 #precipitation-chart {
     margin-left: auto;
     margin-right: auto;
-    max-width: 50%; /* Limite la largeur du graphique */
-    height: 40%; /* Ajuste la hauteur automatiquement */
+    width: 50%;
+    height: 600px;
 }
 
 /* Pied de page*/
