--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ main p {
     margin-left: auto;
     margin-right: auto;
     width: 50%;
-    height: 600px;
+    height: 50%;
 }
 
 /* Pied de page*/
