--- a/styles.css
+++ b/styles.css
@@ -83,12 +83,17 @@ main p {
     color: #666;
 }
 
-/* Style pour le graphique */
 #precipitation-chart {
     margin-left: auto;
     margin-right: auto;
     width: 50%;
     height: 50%;
+}
+
+.table-responsive {
+    width: 100%;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch; /* Ajoute une inertie au défilement sur mobile */
 }
 
 .weather-table {
