--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,7 @@ main p {
 }
 
 .weather-table th, .weather-table td {
-    padding: auto;
+    padding: 8px;
     text-align: center;
     border: 1px solid #ddd;
 }
