--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-/* Style global*/
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -9,7 +8,6 @@ body {
     min-height: 100vh;
 }
 
-/* En-tête*/
 header {
     background-color: #0073e6;
     color: white;
@@ -20,8 +18,11 @@ header h1 {
     margin: 0;
     font-size: 2.5em;
 }
+.header-link {
+    color: white;
+    text-decoration: none;
+}
 
-/* Menu de navigation*/
 nav ul {
     list-style-type: none;
     padding: 0;
@@ -44,7 +45,6 @@ nav ul li a:hover {
     border-radius: 5px;
 }
 
-/* Contenu principal*/
 main {
     padding: 20px;
     text-align: center;
@@ -57,6 +57,13 @@ main h2 {
 main p {
     font-size: 1.2em;
     color: #666;
+}
+
+@media screen and (max-width: 600px) {
+    .weather-table {
+        width: 100%;
+        font-size: 14px;
+    }
 }
 
 #precipitation-chart {
@@ -72,26 +79,21 @@ main p {
     margin: auto;
     table-layout: auto;
 }
-
 .weather-table th, .weather-table td {
     text-align: center;
     border: 1px solid #ddd;
 }
-
 .weather-table th {
     background-color: #007bff;
     color: white;
 }
-
 .weather-table td {
     background-color: #f9f9f9;
 }
-
 .weather-table tr:nth-child(even) td {
     background-color: #f1f1f1;
 }
 
-/* Pied de page*/
 footer {
     background-color: #0073e6;
     color: white;
