--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,13 @@ body {
     box-shadow: 0 4px 6px rgba(0,0,0,0.1);
 }
 
+.logo {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: contain; /* pour bien garder les proportions */
+}
+
 .logo-title {
     display: flex;
     align-items: center;
