--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ main {
 }
 
 .meteo-bloc {
-    background-color: #e6f0fa;
+    background-color: white;
     border: 2px solid #0077be;
     border-radius: 15px;
     padding: 2rem;
