--- a/css/styles.css
+++ b/css/styles.css
@@ -58,15 +58,17 @@ main {
   
   .wind-pointer {
     position: absolute;
-    top: 10px;
+    width: 0;
+    height: 0;
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    border-bottom: 12px solid black;
+    top: 4px;
     left: 50%;
-    width: 4px;
-    height: 50px;
-    background-color: red;
-    transform-origin: bottom center;
+    transform-origin: center 60px;
     transform: rotate(0deg);
     z-index: 2;
-  }
+  }  
   
   .wind-center {
     position: absolute;
