--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,7 @@ main {
     background-color: white;
   }
   
-  .wind-pointer {
+.wind-pointer {
     position: absolute;
     width: 0;
     height: 0;
@@ -77,9 +77,9 @@ main {
     transform-origin: center 60px;
     transform: rotate(0deg);
     z-index: 2;
-  }  
-  
-  .wind-center {
+}  
+
+.wind-center {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -88,20 +88,26 @@ main {
     font-size: 14px;
     line-height: 1.4;
     z-index: 3;
-  }
-  
-  .wind-label {
+}
+
+.wind-label {
     position: absolute;
     font-weight: bold;
     font-size: 14px;
     color: #333;
-  }
+}
+
+.wind-label.north { top: -10px; left: 50%; transform: translateX(-50%); }
+.wind-label.south { bottom: -10px; left: 50%; transform: translateX(-50%); }
+.wind-label.east  { top: 50%; right: -10px; transform: translateY(-50%); }
+.wind-label.west  { top: 50%; left: -10px; transform: translateY(-50%); }
   
-  .wind-label.north { top: -10px; left: 50%; transform: translateX(-50%); }
-  .wind-label.south { bottom: -10px; left: 50%; transform: translateX(-50%); }
-  .wind-label.east  { top: 50%; right: -10px; transform: translateY(-50%); }
-  .wind-label.west  { top: 50%; left: -10px; transform: translateY(-50%); }
-  
+.chart-weather-station {
+    position: absolute;
+    font-weight: bold;
+    font-size: 14px;
+    color: #333;
+}
 
 /* --- HEADER --- */
 .site-header {
