--- a/css/styles.css
+++ b/css/styles.css
@@ -110,26 +110,24 @@ main {
 .uv-bar-container {
     width: 100%;
     height: 10px;
-    background-color: #eee;
+    background-color: #eee; /* Couleur de fond neutre */
     border-radius: 5px;
-    margin-top: 4px;
     overflow: hidden;
+    margin-top: 4px;
   }
   
 .uv-bar-fill {
 height: 100%;
-width: 100%;
+width: 0%; /* Dynamique via JS */
 background: linear-gradient(to right,
-    #2c7bb6 0%,     /* UV 0 */
-    #abd9e9 20%,    /* UV 2-3 */
-    #ffff66 40%,    /* UV 4-5 */
-    #fdae61 70%,    /* UV 6-7 */
-    #d7191c 90%,    /* UV 8-10 */
-    #6b49c8 100%    /* UV 11+ */
+    #2c7bb6,
+    #abd9e9,
+    #ffff66,
+    #fdae61,
+    #d7191c
 );
-background-size: 0% 100%; /* sera mis à jour dynamiquement */
-background-repeat: no-repeat;
-transition: background-size 0.5s ease;
+border-radius: 5px;
+transition: width 0.5s ease;
 }
 
 /* --- HEADER --- */
