--- a/css/styles.css
+++ b/css/styles.css
@@ -110,25 +110,19 @@ main {
 .uv-bar-container {
     width: 100%;
     height: 10px;
-    background-color: #eee; /* Couleur de fond neutre */
+    background-color: #eee;
     border-radius: 5px;
     overflow: hidden;
     margin-top: 4px;
   }
   
 .uv-bar-fill {
-height: 100%;
-width: 0%; /* Dynamique via JS */
-background: linear-gradient(to right,
-    #2c7bb6,
-    #abd9e9,
-    #ffff66,
-    #fdae61,
-    #d7191c
-);
-border-radius: 5px;
-transition: width 0.5s ease;
+    height: 100%;
+    width: 0%;
+    background: #2c7bb6; /* Valeur par défaut */
+    transition: width 0.5s ease;
 }
+  
 
 /* --- HEADER --- */
 .site-header {
