--- a/css/styles.css
+++ b/css/styles.css
@@ -76,15 +76,16 @@ h2 {
   
 .wind-pointer {
     position: absolute;
-    top: 50%;
+    width: 0;
+    height: 0;
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    border-bottom: 12px solid black;
+    top: 4px;
     left: 50%;
-    width: 0; 
-    height: 0; 
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
-    border-bottom: 15px solid black;
-    transform: translate(-50%, -50%);
-    transition: transform 0.3s ease;
+    transform-origin: center 60px;
+    transform: rotate(0deg);
+    z-index: 2;
 }  
 
 .wind-center {
