--- a/css/styles.css
+++ b/css/styles.css
@@ -82,7 +82,7 @@ h2 {
     border-bottom: 12px solid black;
     top: 4px;
     left: 50%;
-    transform-origin: center 60px;
+    transform-origin: center bottom;
     transform: rotate(0deg);
     z-index: 2;
 }  
