--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ h2 {
     justify-content: space-between; /* place le titre en haut, la valeur en bas */
     height: 200px; /* fixe la hauteur (ou utilise une valeur égale via grid/JS) */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
+}
 
 .bloc-titre {
     font-weight: bold;
@@ -61,7 +61,7 @@ h2 {
     font-size: 4rem;
     text-align: center;
     font-weight: bold;
-  }
+}
 
 .wind-rose {
     position: relative;
@@ -71,21 +71,27 @@ h2 {
     border-radius: 50%;
     margin: 0 auto;
     background-color: white;
-  }
+}
+
+.wind-rotator {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: rotate(0deg);
+    transform-origin: center center;
+    z-index: 2;
+}
   
 .wind-pointer {
     position: absolute;
+    top: -60px; /* distance à partir du centre */
+    left: -6px; /* moitié de la largeur du triangle */
     width: 0;
     height: 0;
     border-left: 6px solid transparent;
     border-right: 6px solid transparent;
     border-bottom: 12px solid black;
-    top: 4px;
-    left: 50%;
-    transform-origin: center bottom;
-    transform: rotate(0deg);
-    z-index: 2;
-}  
+}
 
 .wind-center {
     position: absolute;
