--- a/css/styles.css
+++ b/css/styles.css
@@ -72,52 +72,32 @@ h2 {
     margin: 0 auto;
     background-color: white;
 }
-
-.wind-rotator {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: rotate(0deg);
-    transform-origin: center center;
-    z-index: 2;
-}
   
 .wind-pointer {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -100%) rotate(0deg); /* base au centre */
-    transform-origin: center bottom;
     width: 0;
     height: 0;
     border-left: 6px solid transparent;
     border-right: 6px solid transparent;
-    border-bottom: 12px solid black;
-    z-index: 2;
-  }
-
-.wind-center {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    font-size: 14px;
-    line-height: 1.4;
-    z-index: 3;
+    border-bottom: 20px solid black;
+    transform: rotate(0deg);
+    transform-origin: center 20px; /* pile au centre de la rosace */
 }
-
+  
 .wind-label {
     position: absolute;
     font-weight: bold;
     font-size: 14px;
     color: #333;
 }
-
+  
 .wind-label.north { top: -10px; left: 50%; transform: translateX(-50%); }
 .wind-label.south { bottom: -10px; left: 50%; transform: translateX(-50%); }
 .wind-label.east  { top: 50%; right: -10px; transform: translateY(-50%); }
 .wind-label.west  { top: 50%; left: -10px; transform: translateY(-50%); }
+  
   
 .chart-weather-station {
     max-height: 20rem; /* Ajuste cette valeur à ta convenance */
