--- a/css/styles.css
+++ b/css/styles.css
@@ -153,6 +153,11 @@ h2 {
 #form {
     margin-top: 2rem;
     margin-bottom: 2rem;
+    font-size: 1.5rem;
+}
+
+#plage {
+    font-size: 1.5rem;
 }
   
 /* --- HEADER --- */
