--- a/css/styles.css
+++ b/css/styles.css
@@ -111,8 +111,10 @@ h2 {
 .wind-label.west  { top: 50%; left: -10px; transform: translateY(-50%); }
   
 .chart-weather-station {
-    max-height: 20rem; /* Ajuste cette valeur à ta convenance */
+    max-height: 20rem;
     max-width: 60rem;
+    width: 100%;
+    height: 100%;
 }
 
 .uv-container {
