--- a/css/styles.css
+++ b/css/styles.css
@@ -114,7 +114,20 @@ h2 {
     max-height: 20rem;
     max-width: 60rem;
     width: 100%;
-    height: 100%;
+    height: 300px; /* Définissez une hauteur par défaut */
+    border: 1px solid #ccc; /* Ajoutez une bordure pour le débogage visuel */
+    margin-bottom: 20px; /* Ajoutez une marge pour séparer les graphiques */
+}
+
+/* Assurez-vous que les conteneurs des graphiques ont également des dimensions définies */
+#day-chart, #week-chart {
+    display: none; /* Assurez-vous qu'ils sont cachés par défaut */
+    width: 100%;
+}
+
+/* Affichez le bloc par défaut */
+#day-chart {
+    display: block;
 }
 
 .uv-container {
