--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ h2 {
 .wind-label.west  { top: 50%; left: -10px; transform: translateY(-50%); }
   
 .chart-container {
-    display: flex;
+    display: grid;
     flex-direction: column;
     align-items: center;
     width: 100%;
