--- a/css/styles.css
+++ b/css/styles.css
@@ -135,7 +135,7 @@ h2 {
 
 /* Affichez le bloc par défaut */
 #day-chart {
-    display: flex;
+    display: grid;
     flex-direction: column;
     align-items: center;
 }
