--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ h2 {
 }
 
 .meteo-bloc {
-    background-color:#F9F9F9;
+    background-color: white;
     border-radius: 8px;
     padding: 20px;
     display: flex;
