--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,16 @@ h2 {
     font-size: 4rem;
     text-align: center;
     font-weight: bold;
-  }
+}
+
+#temperature-valeur {
+    display: inline-block;
+    padding: 2px 6px; /* Réduire le padding vertical et horizontal */
+    border-radius: 3px; /* Optionnel : pour des coins légèrement arrondis */
+    font-weight: bold;
+    color: black; /* Couleur du texte */
+    width: auto; /* Assurez-vous que la largeur est automatique pour s'adapter au contenu */
+}
 
 .wind-rose {
     position: relative;
@@ -71,7 +80,7 @@ h2 {
     border-radius: 50%;
     margin: 0 auto;
     background-color: white;
-  }
+}
   
 .wind-pointer {
     position: absolute;
