--- a/css/styles.css
+++ b/css/styles.css
@@ -142,6 +142,8 @@ h2 {
 }
 
 .uv-container {
+    justify-content: center; /* centre horizontalement */
+    align-items: center;     /* centre verticalement */
     width: 100%;
     max-width: 400px;
     margin-top: 1em;
