--- a/css/styles.css
+++ b/css/styles.css
@@ -185,6 +185,23 @@ h2 {
 #plage {
     font-size: 1.2rem;
 }
+
+#tide-container {
+    position: relative;
+    display: inline-block;
+    width: 300px; /* ou ce que tu veux */
+}
+
+.overlay {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    background: rgba(255, 0, 0, 0.7);
+    color: white;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-weight: bold;
+}
   
 /* --- HEADER --- */
 .site-header {
