--- a/css/styles.css
+++ b/css/styles.css
@@ -195,7 +195,7 @@ h2 {
     position: absolute;
     top: 254px;
     bottom: 0;
-    left: 300px;
+    left: 300px; /* 55 -> 655 */
     width: 3px;
     height: 242px;
     background-color: red;
