--- a/css/styles.css
+++ b/css/styles.css
@@ -225,6 +225,12 @@ h2 {
     text-align: center;
 }
 
+#logo-croisic {
+    width: 200px;
+    height: 200px;
+    object-fit: contain; /* pour bien garder les proportions */
+}
+
 .header-link {
     text-decoration: none;
     color: inherit;
