--- a/css/styles.css
+++ b/css/styles.css
@@ -225,6 +225,16 @@ h2 {
     text-align: center;
 }
 
+.logo-wrapper {
+    width: 50px;
+    height: 50px;
+    background-color: white;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 #logo-croisic {
     width: 200px;
     height: 200px;
